--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8" />
-    <!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" /><![endif]-->
     <title>Лабораторная работа 4</title>
     <link rel="stylesheet" href="https://www.x3dom.org/download/x3dom.css" />
     <script src="https://www.x3dom.org/download/dev/x3dom-full.js"></script>
@@ -10,7 +9,8 @@
     <script src="./js/custom.js"></script>
   </head>
   <body>
-      <h1>Я тут!(лаба)</h1>
+      <h2>Не забудьте заглянуть в дом (Быстрее -> PgUp)</h2>
+      <p><h3>Да-да олень немножечко не в себе</h3></p>
       <X3D id="x3d" xmlns="https://www.x3dom.org/x3dom">
           <Scene>
             <!--<Пианино>-->
@@ -111,80 +111,63 @@
               <PositionInterpolator DEF='PosInt_Black1' key='0 0.2 0.4 0.6 0.8 1'
                                     keyValue='0 0 0, 0 -0.2 0, 0 0 0, 0 0 0, 0 -0.2 0, 0 0 0'></PositionInterpolator>
               <ROUTE fromNode='Time' fromField='fraction_changed'
-                     toNode='PosInt_Black1' toField='set_fraction'>
-              </ROUTE>
+                     toNode='PosInt_Black1' toField='set_fraction'></ROUTE>
               <ROUTE fromNode='PosInt_Black1' fromField='value_changed'
-                     toNode='Black1' toField='set_translation'>
-              </ROUTE>
+                     toNode='Black1' toField='set_translation'></ROUTE>
               <PositionInterpolator DEF='PosInt_Black2' key='0 0.2 0.4 0.6 0.8 1'
                                     keyValue='2 -0.2 0, 2 0 0, 2 0 0, 2 -0.2 0, 2 0 0, 2 -0.2 0'></PositionInterpolator>
               <ROUTE fromNode='Time' fromField='fraction_changed'
-                     toNode='PosInt_Black2' toField='set_fraction'>
-              </ROUTE>
+                     toNode='PosInt_Black2' toField='set_fraction'></ROUTE>
               <ROUTE fromNode='PosInt_Black2' fromField='value_changed'
-                     toNode='Black2' toField='set_translation'>
-              </ROUTE>
-
+                     toNode='Black2' toField='set_translation'></ROUTE>
               <PositionInterpolator DEF='PosInt_Black3' key='0 0.2 0.4 0.6 0.8 1'
                                     keyValue='-2 -0.2 0, -2 0 0, -2 -0.2 0, -2 0 0, -2 0 0, -2 -0.2 0'></PositionInterpolator>
               <ROUTE fromNode='Time' fromField='fraction_changed'
-                     toNode='PosInt_Black3' toField='set_fraction'>
-              </ROUTE>
+                     toNode='PosInt_Black3' toField='set_fraction'></ROUTE>
               <ROUTE fromNode='PosInt_Black3' fromField='value_changed'
-                     toNode='Black3' toField='set_translation'>
-              </ROUTE>
+                     toNode='Black3' toField='set_translation'></ROUTE>
               <PositionInterpolator DEF='PosInt_White1' key='0 0.1 0.2 0.3 0.4 0.5 0.6 0.7 0.8 0.9 1'
                                     keyValue='0.25 -0.2 0.5, 0.25 -0.2 0.5, 0.25 -0.3 0.5, 0.25 -0.2 0.5, 0.25 -0.3 0.5, 0.25 -0.2 0.5,
                                   0.25 -0.3 0.5, 0.25 -0.2 0.5, 0.25 -0.3 0.5, 0.25 -0.2 0.5, 0.25 -0.2 0.5'></PositionInterpolator>
               <ROUTE fromNode='Time' fromField='fraction_changed'
-                     toNode='PosInt_White1' toField='set_fraction'>
-              </ROUTE>
+                     toNode='PosInt_White1' toField='set_fraction'></ROUTE>
               <ROUTE fromNode='PosInt_White1' fromField='value_changed'
-                     toNode='White1' toField='set_translation'>
-              </ROUTE>
+                     toNode='White1' toField='set_translation'></ROUTE>
               <PositionInterpolator DEF='PosInt_White2' key='0 0.1 0.2 0.3 0.4 0.5 0.6 0.7 0.8 0.9 1'
                                     keyValue='1.25 -0.2 0.5, 1.25 -0.3 0.5, 1.25 -0.2 0.5, 1.25 -0.2 0.5, 1.25 -0.3 0.5, 1.25 -0.2 0.5,
                                   1.25 -0.2 0.5, 1.25 -0.3 0.5, 1.25 -0.2 0.5, 1.25 -0.2 0.5, 1.25 -0.2 0.5'></PositionInterpolator>
               <ROUTE fromNode='Time' fromField='fraction_changed'
-                     toNode='PosInt_White2' toField='set_fraction'>
-              </ROUTE>
+                     toNode='PosInt_White2' toField='set_fraction'></ROUTE>
               <ROUTE fromNode='PosInt_White2' fromField='value_changed'
-                     toNode='White2' toField='set_translation'>
-              </ROUTE>
+                     toNode='White2' toField='set_translation'></ROUTE>
               <PositionInterpolator DEF='PosInt_White3' key='0 0.1 0.2 0.3 0.4 0.5 0.6 0.7 0.8 0.9 1'
                                     keyValue='2.25 -0.2 0.5, 2.25 -0.2 0.5, 2.25 -0.2 0.5, 2.25 -0.3 0.5, 2.25 -0.2 0.5, 2.25 -0.2 0.5,
                                   2.25 -0.3 0.5, 2.25 -0.2 0.5, 2.25 -0.2 0.5, 2.25 -0.3 0.5, 2.25 -0.2 0.5'></PositionInterpolator>
               <ROUTE fromNode='Time' fromField='fraction_changed'
-                     toNode='PosInt_White3' toField='set_fraction'>
-              </ROUTE>
+                     toNode='PosInt_White3' toField='set_fraction'></ROUTE>
               <ROUTE fromNode='PosInt_White3' fromField='value_changed'
-                     toNode='White3' toField='set_translation'>
-              </ROUTE>
+                     toNode='White3' toField='set_translation'></ROUTE>
               <PositionInterpolator DEF='PosInt_White4' key='0 0.1 0.2 0.3 0.4 0.5 0.6 0.7 0.8 0.9 1'
                                     keyValue='-0.75 -0.2 0.5, -0.75 -0.3 0.5, -0.75 -0.2 0.5, -0.75 -0.3 0.5, -0.75 -0.2 0.5, -0.75 -0.2 0.5,
                                   -0.75 -0.2 0.5, -0.75 -0.3 0.5, -0.75 -0.2 0.5, -0.75 -0.3 0.5, -0.75 -0.2 0.5'></PositionInterpolator>
               <ROUTE fromNode='Time' fromField='fraction_changed'
-                     toNode='PosInt_White4' toField='set_fraction'>
-              </ROUTE>
+                     toNode='PosInt_White4' toField='set_fraction'></ROUTE>
               <ROUTE fromNode='PosInt_White4' fromField='value_changed'
-                     toNode='White4' toField='set_translation'>
-              </ROUTE>
+                     toNode='White4' toField='set_translation'></ROUTE>
               <PositionInterpolator DEF='PosInt_White5' key='0 0.1 0.2 0.3 0.4 0.5 0.6 0.7 0.8 0.9 1'
                                     keyValue='-1.75 -0.2 0.5, -1.75 -0.2 0.5, -1.75 -0.3 0.5, -1.75 -0.3 0.5, -1.75 -0.2 0.5, -1.75 -0.3 0.5,
                                   -1.75 -0.2 0.5, -1.75 -0.2 0.5, -1.75 -0.3 0.5, -1.75 -0.3 0.5, -1.75 -0.2 0.5'></PositionInterpolator>
               <ROUTE fromNode='Time_for_deer' fromField='fraction_changed'
-                     toNode='PosInt_White5' toField='set_fraction'>
-              </ROUTE>
+                     toNode='PosInt_White5' toField='set_fraction'></ROUTE>
               <ROUTE fromNode='PosInt_White5' fromField='value_changed'
-                     toNode='White5' toField='set_translation'>
-              </ROUTE>
+                     toNode='White5' toField='set_translation'></ROUTE>
               <!--</Пианино>-->
               <Background skyAngle='0.9 1.57 2.3'skyColor='0.21 0.18 0.66 0.2
-                        0.44 0.85 0.75 0.6 0.4 0.77 0.8 0.82'></Background>
+              0.44 0.85 0.75 0.6 0.4 0.77 0.8 0.82'></Background>
               <DirectionalLight ambientIntensity="0.5" direction="0 -1 0" on="true" shadowIntensity='0.5'
                               shadowCascades="0.5"
                               intensity="0.8" global="true"></DirectionalLight>
-              <NavigationInfo Headlight="false"></NavigationInfo>
+              <NavigationInfo Headlight="false" type="LOOKAT"></NavigationInfo>
               <Viewpoint fieldOfView="1" position="-8 -1.5 4"
                        orientation="0 -1 0 0.5"></Viewpoint>
               <Viewpoint fieldOfView="1" position="0 -0.5 -9" orientation="-1 0 0 0.3">></Viewpoint>
@@ -194,29 +177,25 @@
               </Transform>
             </Transform>
             <TimeSensor id="Time_for_sun" DEF='Time_for_deer' cycleInterval='10' loop='true' enabled='true'></TimeSensor>
-              <PositionInterpolator DEF='PosInt_Deer' key='0 0.1 0.2 0.3 0.4 0.5 0.6 0.7 0.8 0.9 1'
-                                    keyValue='6 -4 0, 3 -2 0, 0 -4 0, -3 -2 0, -6 -4 0, -8 -2 0, -6 -4 0, -3 -2 0,  0 -4 0, 3 -2 0, 6 -4 0'></PositionInterpolator>
-              <ROUTE fromNode='Time' fromField='fraction_changed'
-                     toNode='PosInt_Deer' toField='set_fraction'>
-              </ROUTE>
-              <ROUTE fromNode='PosInt_Deer' fromField='value_changed'
-                     toNode='DEER' toField='set_translation'>
-              </ROUTE>
-              <OrientationInterpolator DEF='OrientInt_Deer' key='0 0.5 1' keyValue='0 1 0 0 0 1 0 -3.14 0 1 0 -6.28'></OrientationInterpolator>
-              <ROUTE fromNode='Time_for_deer' fromField='fraction_changed'
-                 toNode='OrientInt_Deer' toField='set_fraction'>
-               </ROUTE>
-               <ROUTE fromNode='OrientInt_Deer' fromField='value_changed'
-                 toNode='DEER1' toField='set_rotation'>
-               </ROUTE>
-          <!--<ПОЛЕ>-->
-          <Transform translation='-12 -5 -20'>
+            <PositionInterpolator DEF='PosInt_Deer' key='0 0.1 0.2 0.3 0.4 0.5 0.6 0.7 0.8 0.9 1'
+            keyValue='6 -4 0, 3 -2 0, 0 -4 0, -3 -2 0, -6 -4 0, -8 -2 0, -6 -4 0, -3 -2 0,  0 -4 0, 3 -2 0, 6 -4 0'></PositionInterpolator>
+            <ROUTE fromNode='Time' fromField='fraction_changed'
+            toNode='PosInt_Deer' toField='set_fraction'></ROUTE>
+            <ROUTE fromNode='PosInt_Deer' fromField='value_changed'
+            toNode='DEER' toField='set_translation'></ROUTE>
+            <OrientationInterpolator DEF='OrientInt_Deer' key='0 0.5 1' keyValue='0 1 0 0 0 1 0 -3.14 0 1 0 -6.28'></OrientationInterpolator>
+            <ROUTE fromNode='Time_for_deer' fromField='fraction_changed'
+            toNode='OrientInt_Deer' toField='set_fraction'></ROUTE>
+            <ROUTE fromNode='OrientInt_Deer' fromField='value_changed'
+            toNode='DEER1' toField='set_rotation'></ROUTE>
+            <!--<ПОЛЕ>-->
+            <Transform translation='-12 -5 -20'>
               <Shape>
                   <Appearance>
                       <ImageTexture url="58d4cc26e7417.jpg"></ImageTexture>
                       <Texturetransform repeatS="True" repeatT="True" scale="3 3"></Texturetransform>
                   </Appearance>
-                  <ElevationGrid xDimension="10" zDimension="11" xSpacing="2.5" zSpacing="2.5" solid="false"
+                  <ElevationGrid xDimension="11" zDimension="12" xSpacing="2.5" zSpacing="2.5" solid="false"
                                  height="1.5, 2.1, 1.5, 1.1, 1.1, 1.1, 1.1, 0.6, 0.9, 1.0,
                                          1.3, 0.9, 0.7, 1.1, 1.1, 1.1, 1.1, 0.8, 1.5, 1.2,
                                          1.0, 0.5, 0.8, 1.1, 1.1, 1.1, 1.1, 0.9, 0.7, 0.9,
@@ -226,14 +205,17 @@
                                          1.1, 1.1, 1.1, 1.1, 1.1, 1.1, 1.1, 1.1, 1.1, 1.1,
                                          1.1, 1.1, 1.1, 1.1, 1.1, 1.1, 1.1, 1.1, 1.1, 1.2,
                                          0.8, 0.9, 1.2, 0.9, 1.0, 0.8, 0.7, 0.9, 1.3, 1.5,
-                                         1.1, 1.3, 1.5, 1.2, 1.0, 1.3, 0.9, 0.7, 0.6, 0.5">
+                                         1.1, 1.3, 1.5, 1.2, 1.0, 1.3, 0.9, 0.7, 0.6, 0.5,
+                                         1.3, 1.1, 1.1, 1.2, 1.0, 1.1, 0.7, 0.3, 0.9, 0.8,
+                                         0.9, 0.7, 1.3, 1.2, 1.1, 0.8, 0.6, 0.8, 0.6, 1.2,
+                                         0.5, 1.0, 0.5, 0.9, 0.9, 0.5, 0.9, 0.6, 0.9, 0.5,">
                   </ElevationGrid>
               </Shape>
-          </Transform>
-          <!--</ПОЛЕ>-->
-          <!--<ДОРОГА>-->
-        <Transform translation='0 -3.8 -5'>
-            <Transform translation='-0.5 0 0'>
+            </Transform>
+            <!--</ПОЛЕ>-->
+            <!--<ДОРОГА>-->
+            <Transform translation='0 -3.8 -5'>
+              <Transform translation='-0.5 0 0'>
                 <Shape>
                     <Appearance>
                         <ImageTexture url="road_brick_65.jpg"></ImageTexture>
@@ -241,8 +223,8 @@
                     </Appearance>
                     <Box size="20 .3 5"></Box>
                 </Shape>
-            </Transform>
-            <Transform translation='0 0 -7.0'>
+              </Transform>
+              <Transform translation='0 0 -7.0'>
                 <Shape>
                     <Appearance>
                         <ImageTexture url="road_brick_65.jpg"></ImageTexture>
@@ -250,8 +232,8 @@
                     </Appearance>
                     <Box size="11 .3 9"></Box>
                 </Shape>
-            </Transform>
-            <Transform translation='0 0 -7.5'>
+              </Transform>
+              <Transform translation='0 0 -7.5'>
                 <Shape>
                     <Appearance>
                         <ImageTexture url="A135A_wood-siding_021914-1160x773.jpg"></ImageTexture>
@@ -259,36 +241,48 @@
                     </Appearance>
                     <Box size="10 1 7.5"></Box>
                 </Shape>
+              </Transform>
             </Transform>
-        </Transform>
-        <!--</ДОРОГА>-->
-        <!--<КОРОБКА ДОМА>-->
-        <Transform translation='0 -1.5 -15'>
-          <!--<ДВЕРЬ>-->
+            <!--</ДОРОГА>-->
+            <!--<КОРОБКА ДОМА>-->
+            <Transform translation='0 -1.5 -15'>
+              <!--<Бабушкин ковер>-->
+              <Transform translation='0 0.5 0'>
+                <Shape>
+                  <Appearance>
+                    <ImageTexture url="cap.jpg"></ImageTexture>
+                    <Texturetransform repeatS="True" repeatT="True"
+                    scale="1 1"></Texturetransform>
+                  </Appearance>
+                  <Box size="8 3.5 0.2"></Box>
+                </Shape>
+              </Transform>
+              <!--</Бабушкин ковер>-->
+              <!--<ДВЕРЬ>-->
               <Anchor url="https://ru.wikipedia.org/wiki/%D0%A2%D0%B0%D0%B2%D0%B5%D1%80%D0%BD%D0%B0"
-                      parameter="target='_self'">
-                  <Transform translation='-1 -0.5 6'>
-                      <Shape>
-                          <Appearance>
-                              <ImageTexture url="brownoakdoors-p.jpg"></ImageTexture>
-                              <Texturetransform repeatS="True" repeatT="True"
-                                                scale="1 1"></Texturetransform>
-                          </Appearance>
-                          <Box size="2 3 0.3"></Box>
-                      </Shape>
-                  </Transform>
-                  <Transform translation='1 -0.5 6'>
-                      <Shape>
-                          <Appearance>
-                              <ImageTexture url="brownoakdoors-l.jpg"></ImageTexture>
-                              <Texturetransform repeatS="True" repeatT="True"
-                                                scale="1 1"></Texturetransform>
-                          </Appearance>
-                          <Box size="2 3 0.3"></Box>
-                      </Shape>
-                  </Transform>
-              </Anchor>
-              <!--</ДВЕРЬ>-->
+              parameter="target='_self'">
+              <Transform translation='-1 -0.5 6'>
+                <Shape>
+                  <Appearance>
+                    <ImageTexture url="brownoakdoors-p.jpg"></ImageTexture>
+                    <Texturetransform repeatS="True" repeatT="True"
+                    scale="1 1"></Texturetransform>
+                  </Appearance>
+                  <Box size="2 3 0.3"></Box>
+                </Shape>
+              </Transform>
+              <Transform translation='1 -0.5 6'>
+                <Shape>
+                  <Appearance>
+                    <ImageTexture url="brownoakdoors-l.jpg"></ImageTexture>
+                    <Texturetransform repeatS="True" repeatT="True"
+                    scale="1 1"></Texturetransform>
+                  </Appearance>
+                  <Box size="2 3 0.3"></Box>
+                </Shape>
+              </Transform>
+            </Anchor>
+            <!--</ДВЕРЬ>-->
             <!--<КРЫША>-->
             <Transform translation='0 3.7 3'>
                 <Shape>
@@ -335,10 +329,10 @@
                 </Transform>
             </Transform>
             <!--</СТЕНЫ>-->
-        </Transform>
-        <!--</КОРОБКА ДОМА>-->
-        <!--<ДЫМОХОД>-->
-        <Transform translation='3.5 2.5 -12'>
+          </Transform>
+          <!--</КОРОБКА ДОМА>-->
+          <!--<ДЫМОХОД>-->
+          <Transform translation='3.5 2.5 -12'>
             <Shape>
                 <Appearance>
                     <ImageTexture url="1558314.jpg"></ImageTexture>
@@ -350,9 +344,9 @@
                            spine='[0 -1 0, 0 1 0]'>
                 </Extrusion>
             </Shape>
-        </Transform>
-        <!--</ДЫМОХОД>-->
-        <!--<ФОНАРЬ>-->
+          </Transform>
+          <!--</ДЫМОХОД>-->
+          <!--<ФОНАРЬ>-->
           <Transform translation='-6 -1.5 -4.5'>
               <Group DEF="FONAR">
                   <Shape>
@@ -409,11 +403,9 @@
           <!--</ФОНАРЬ1>-->
           <ColorInterpolator DEF='ColInt' key='0 0.4 0.6 1' keyValue='0 0.5 0, 0 0.3 0.5,0.5 0 0.3,0 0.5 0 '></ColorInterpolator>
           <ROUTE fromNode='Time' fromField='fraction_changed'
-               toNode='ColInt' toField='set_fraction'>
-        </ROUTE>
-        <ROUTE fromNode='ColInt' fromField='value_changed'
-               toNode='Mat' toField='set_diffuseColor'>
-        </ROUTE>
+               toNode='ColInt' toField='set_fraction'></ROUTE>
+          <ROUTE fromNode='ColInt' fromField='value_changed'
+               toNode='Mat' toField='set_diffuseColor'></ROUTE>
         <!--<Солнце>-->
         <Transform DEF="Sun">
           <Transform DEF="Sun1" translation="0 0 -20">
@@ -428,19 +420,18 @@
             <TimeSensor id="Time_for_sun" DEF='Time_for_sun' cycleInterval='15' loop='true' enabled='true'></TimeSensor>
             <OrientationInterpolator DEF='OrientInt' key='0 0.5 1' keyValue='0.5 1 0 0 0.5 1 0 -3.14 0.5 1 0 -6.28'></OrientationInterpolator>
             <ROUTE fromNode='Time_for_sun' fromField='fraction_changed'
-               toNode='OrientInt' toField='set_fraction'>
-        </ROUTE>
-        <ROUTE fromNode='OrientInt' fromField='value_changed'
-               toNode='Sun' toField='set_rotation'>
-        </ROUTE>
-        <OrientationInterpolator DEF='OrientInt1' key='0 0.5 1' keyValue='0 1 0 0 0 1 0 -3.14 0 1 0 -6.28'></OrientationInterpolator>
-        <ROUTE fromNode='Time' fromField='fraction_changed'
-           toNode='OrientInt1' toField='set_fraction'>
-         </ROUTE>
-         <ROUTE fromNode='OrientInt1' fromField='value_changed'
-           toNode='Sun1' toField='set_rotation'>
-         </ROUTE>
-          </Scene>
+               toNode='OrientInt' toField='set_fraction'></ROUTE>
+            <ROUTE fromNode='OrientInt' fromField='value_changed'
+            toNode='Sun' toField='set_rotation'>
+            </ROUTE>
+            <OrientationInterpolator DEF='OrientInt1' key='0 0.5 1' keyValue='0 1 0 0 0 1 0 -3.14 0 1 0 -6.28'></OrientationInterpolator>
+            <ROUTE fromNode='Time' fromField='fraction_changed'
+            toNode='OrientInt1' toField='set_fraction'>
+            </ROUTE>
+            <ROUTE fromNode='OrientInt1' fromField='value_changed'
+            toNode='Sun1' toField='set_rotation'>
+          </ROUTE>
+        </Scene>
       </X3D>
   </body>
 </html>
