--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="./js/custom.js"></script>
   </head>
   <body>
-      <h2>Не забудьте заглянуть в дом (Быстрее -> PgUp)</h2>
+      <h2>Не забудьте заглянуть в дом (Быстрее - PgUp)</h2>
       <p><h3>Да-да олень немножечко не в себе</h3></p>
       <X3D id="x3d" xmlns="https://www.x3dom.org/x3dom">
           <Scene>
@@ -176,7 +176,7 @@
                 <Inline url="Deer.x3d"></Inline>
               </Transform>
             </Transform>
-            <TimeSensor id="Time_for_sun" DEF='Time_for_deer' cycleInterval='10' loop='true' enabled='true'></TimeSensor>
+            <TimeSensor id="Time_for_deer" DEF='Time_for_deer' cycleInterval='10' loop='true' enabled='true'></TimeSensor>
             <PositionInterpolator DEF='PosInt_Deer' key='0 0.1 0.2 0.3 0.4 0.5 0.6 0.7 0.8 0.9 1'
             keyValue='6 -4 0, 3 -2 0, 0 -4 0, -3 -2 0, -6 -4 0, -8 -2 0, -6 -4 0, -3 -2 0,  0 -4 0, 3 -2 0, 6 -4 0'></PositionInterpolator>
             <ROUTE fromNode='Time' fromField='fraction_changed'
@@ -195,7 +195,7 @@
                       <ImageTexture url="58d4cc26e7417.jpg"></ImageTexture>
                       <Texturetransform repeatS="True" repeatT="True" scale="3 3"></Texturetransform>
                   </Appearance>
-                  <ElevationGrid xDimension="11" zDimension="12" xSpacing="2.5" zSpacing="2.5" solid="false"
+                  <ElevationGrid xDimension="10" zDimension="13" xSpacing="2.5" zSpacing="2.5" solid="false"
                                  height="1.5, 2.1, 1.5, 1.1, 1.1, 1.1, 1.1, 0.6, 0.9, 1.0,
                                          1.3, 0.9, 0.7, 1.1, 1.1, 1.1, 1.1, 0.8, 1.5, 1.2,
                                          1.0, 0.5, 0.8, 1.1, 1.1, 1.1, 1.1, 0.9, 0.7, 0.9,
@@ -418,17 +418,16 @@
               </Transform>
             </Transform>
             <TimeSensor id="Time_for_sun" DEF='Time_for_sun' cycleInterval='15' loop='true' enabled='true'></TimeSensor>
-            <OrientationInterpolator DEF='OrientInt' key='0 0.5 1' keyValue='0.5 1 0 0 0.5 1 0 -3.14 0.5 1 0 -6.28'></OrientationInterpolator>
+            <OrientationInterpolator DEF='OrientInt_Sun' key='0 0.5 1' keyValue='0.5 1 0 0 0.5 1 0 -3.14 0.5 1 0 -6.28'></OrientationInterpolator>
             <ROUTE fromNode='Time_for_sun' fromField='fraction_changed'
-               toNode='OrientInt' toField='set_fraction'></ROUTE>
-            <ROUTE fromNode='OrientInt' fromField='value_changed'
+               toNode='OrientInt_Sun' toField='set_fraction'></ROUTE>
+            <ROUTE fromNode='OrientInt_Sun' fromField='value_changed'
             toNode='Sun' toField='set_rotation'>
             </ROUTE>
-            <OrientationInterpolator DEF='OrientInt1' key='0 0.5 1' keyValue='0 1 0 0 0 1 0 -3.14 0 1 0 -6.28'></OrientationInterpolator>
+            <OrientationInterpolator DEF='OrientInt_Sun1' key='0 0.5 1' keyValue='0 1 0 0 0 1 0 -3.14 0 1 0 -6.28'></OrientationInterpolator>
             <ROUTE fromNode='Time' fromField='fraction_changed'
-            toNode='OrientInt1' toField='set_fraction'>
-            </ROUTE>
-            <ROUTE fromNode='OrientInt1' fromField='value_changed'
+            toNode='OrientInt_Sun1' toField='set_fraction'></ROUTE>
+            <ROUTE fromNode='OrientInt_Sun1' fromField='value_changed'
             toNode='Sun1' toField='set_rotation'>
           </ROUTE>
         </Scene>
