--- a/index.html
+++ b/index.html
@@ -5,9 +5,52 @@
     <!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" /><![endif]-->
     <title>Лабораторная работа 4</title>
     <link rel="stylesheet" href="https://www.x3dom.org/download/x3dom.css" />
-    <script src="https://www.x3dom.org/download/x3dom.js"></script>
+    <script src="https://www.x3dom.org/download/dev/x3dom-full.js"></script>
   </head>
   <body>
-    <h1>Здесь только я. А должна быть твоя лаба!</h1>
+    <article>
+      <h1>Лабораторная работа №4</h1>
+      <p>Павлов Михаил, гр. 4642</p>
+    </article>
+    <x3d id="x3d" xmlns="https://www.x3dom.org/x3dom"  style="width:100%; height:85%; border:none;">
+      <scene>
+        
+        <!-- пол и стены -->
+        <transform>
+          <Shape>
+            <Appearance>
+              <Material diffuseColor='#c0c0c0'></Material>
+            </Appearance>
+            <Box size="80 0.01 40"></Box>
+          </Shape>
+        </transform>
+        <transform translation="0 0 -20">
+          <Shape>
+            <Appearance>
+              <ImageTexture url="https://raw.githubusercontent.com/mihalichpalich/icg_labwork3/gh-pages/forest.png"></ImageTexture>
+            </Appearance>
+            <Box size="80 60 0.01"></Box>
+          </Shape>
+        </transform>
+        <!-- <transform translation="82 10 3" rotation="0 1 0 -0.08">
+          <Shape>
+            <Appearance>
+              <ImageTexture url="https://raw.githubusercontent.com/mihalichpalich/icg_labwork3/gh-pages/forest.png"></ImageTexture>
+            </Appearance>
+            <Box size="0.01 30 118"></Box>
+          </Shape>
+        </transform>
+        <transform translation="-95 11.5 -11" rotation="0 1 0 -0.08">
+          <Shape>
+            <Appearance>
+              <ImageTexture url="https://raw.githubusercontent.com/mihalichpalich/icg_labwork3/gh-pages/forest.png"></ImageTexture>
+            </Appearance>
+            <Box size="0.01 30 118"></Box>
+          </Shape>
+        </transform> -->
+        
+      </scene>
+    </x3d>
+    <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
   </body> 
 </html>
