--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <x3d id="x3d" xmlns="https://www.x3dom.org/x3dom"  style="width:100%; height:85%; border:none;">
       <scene>
         
-        <!-- пол и стены -->
+        <!-- пол, потолок и стены -->
         <transform>
           <Shape>
             <Appearance>
@@ -24,31 +24,97 @@
             <Box size="80 0.01 40"></Box>
           </Shape>
         </transform>
-        <transform translation="0 0 -20">
+        <transform translation="0 30 0">
           <Shape>
             <Appearance>
-              <ImageTexture url="https://raw.githubusercontent.com/mihalichpalich/icg_labwork3/gh-pages/forest.png"></ImageTexture>
+              <Material diffuseColor='#c0c0c0'></Material>
             </Appearance>
-            <Box size="80 60 0.01"></Box>
+            <Box size="80 0.01 40"></Box>
           </Shape>
         </transform>
-        <!-- <transform translation="82 10 3" rotation="0 1 0 -0.08">
+        <transform translation="0 15 -20">
           <Shape>
             <Appearance>
-              <ImageTexture url="https://raw.githubusercontent.com/mihalichpalich/icg_labwork3/gh-pages/forest.png"></ImageTexture>
+              <ImageTexture url="https://raw.githubusercontent.com/mihalichpalich/icg_labwork4/gh-pages/wall.jpg"></ImageTexture>
+              <TextureTransform  scale="2 2"></TextureTransform>
             </Appearance>
-            <Box size="0.01 30 118"></Box>
+            <Box size="80 30 0.01"></Box>
           </Shape>
         </transform>
-        <transform translation="-95 11.5 -11" rotation="0 1 0 -0.08">
+        <transform translation="-40 15 0">
           <Shape>
             <Appearance>
-              <ImageTexture url="https://raw.githubusercontent.com/mihalichpalich/icg_labwork3/gh-pages/forest.png"></ImageTexture>
+              <ImageTexture url="https://raw.githubusercontent.com/mihalichpalich/icg_labwork4/gh-pages/wall.jpg"></ImageTexture>
+              <TextureTransform  scale="2 2"></TextureTransform>
             </Appearance>
-            <Box size="0.01 30 118"></Box>
+            <Box size="0.01 30 40"></Box>
           </Shape>
-        </transform> -->
-        
+        </transform>
+        <transform translation="40 15 0">
+          <Shape>
+            <Appearance>
+              <ImageTexture url="https://raw.githubusercontent.com/mihalichpalich/icg_labwork4/gh-pages/wall.jpg"></ImageTexture>
+              <TextureTransform  scale="2 2"></TextureTransform>
+            </Appearance>
+            <Box size="0.01 30 40"></Box>
+          </Shape>
+        </transform> 
+
+        <!-- КОНВЕЙЕРНАЯ ЛЕНТА -->
+        <!-- подставка -->
+        <transform translation="0 4 0">
+          <Shape>
+            <Appearance>
+              <Material diffuseColor='#43464B'></Material>
+            </Appearance>
+            <Box size="80 8 8"></Box>
+          </Shape>
+        </transform>
+        <!-- отверстия -->
+        <transform translation="-40 15 0">
+          <Shape>
+            <Appearance>
+              <Material diffuseColor='black'></Material>
+            </Appearance>
+            <Box size="0.02 7 8"></Box>
+          </Shape>
+        </transform>
+        <transform translation="40 15 0">
+          <Shape>
+            <Appearance>
+              <Material diffuseColor='black'></Material>
+            </Appearance>
+            <Box size="0.02 7 8"></Box>
+          </Shape>
+        </transform>
+        <!-- сама лента -->
+        <transform translation="0 11.5 0">
+          <Shape>
+            <Appearance>
+              <Material diffuseColor='#e9e9e9'></Material>
+            </Appearance>
+            <Box size="80 0.01 8"></Box>
+          </Shape>
+        </transform>
+        <!-- цилиндры -->
+        <group DEF="tsylindry">
+          <transform translation="-35 9.7 0" rotation="1 0 0 -1.57">
+            <shape>
+              <Appearance>
+                <Material diffuseColor='#c0c0c0'></Material>
+              </Appearance>
+              <cylinder radius="1.7" height="8" solid="false"></cylinder>
+            </shape>
+            <transform translation="0 -4 0">
+              <shape>
+                <Appearance>
+                  <Material diffuseColor='red'></Material>
+                </Appearance>
+                <cylinder radius="1.7" height="0.01" solid="false"></cylinder>
+              </shape>
+            </transform>         
+          </transform>
+        </group>
       </scene>
     </x3d>
     <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
