поменял текстуру шестеренки

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <transform translation="0 -4 0">
               <shape>
                 <Appearance>
-                  <Material diffuseColor='red'></Material>
+                  <ImageTexture url="https://raw.githubusercontent.com/mihalichpalich/icg_labwork4/gh-pages/gear.png"></ImageTexture>
                 </Appearance>
                 <cylinder radius="1.7" height="0.01" solid="false"></cylinder>
               </shape>
